<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity">

    <!-- Logo và chào mừng admin -->
    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="9dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="Chào Mừng Admin"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Đường kẻ phân chia -->
    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Danh sách các quản lý -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        app:layout_constraintBottom_toTopOf="@id/layout_logout"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp">

        <!-- Quản lý nhân sự -->
        <LinearLayout
            android:id="@+id/layout_employee_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_employee_management"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_employee"
                android:contentDescription="@string/logo_description_employee"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txt_employee_management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quản Lý Nhân Sự"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Quản lý phòng ban -->
        <LinearLayout
            android:id="@+id/layout_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_department"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_department"
                android:contentDescription="@string/logo_description_department"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txt_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quản Lý Phòng Ban"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Quản lý chức vụ -->
        <LinearLayout
            android:id="@+id/layout_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_position"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_position"
                android:contentDescription="@string/logo_description_position"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txt_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quản Lý Chức Vụ"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- Đánh giá nhân viên -->
        <LinearLayout
            android:id="@+id/layout_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/img_evaluation"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_salary"
                android:contentDescription="@string/logo_description_evaluation"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txt_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quản lý tiền lương"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Nút đăng xuất -->
    <LinearLayout
        android:id="@+id/layout_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logout"
            android:contentDescription="@string/logo_description_logout"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Đăng Xuất"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
